fix article title alignment

--- a/_includes/style.css
+++ b/_includes/style.css
@@ -69,6 +69,7 @@ article > header {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+        text-align: center;
 }
 
 #journal-date {
